full language system support

--- a/translations/english.json
+++ b/translations/english.json
@@ -1,10 +1,83 @@
 {
+    "argname": "-english",
     "localname": "English",
     "translation":
     {
+        "FullnameLang": "English",
         "mainmenu":
         {
-            "top": "==============\n|MAIN MENU|\n=============="
+            "top": "==============\n|ГЛАВНОЕ МЕНЮ|\n==============",
+            "ask": "1. Управление конфигами\n2. Управление ратниками\n3. Смена языка\n4. Перезагрузка\nВвод"
+        },
+        "langs":
+        {
+            "changelang":
+            {
+                "top": "=================\n|СМЕНА ЯЗЫКОВ|\n=================",
+                "ask": 
+                {
+                    "one": "ТЕКУЩИЙ ЯЗЫК => ",
+                    "two": "\n=================="
+                },
+                "langsnotfinded": "Языков не обнаружено",
+                "bot": "==================",
+                "chooselang": "Введите порядковый номер"
+            }
+        },
+        "configs":
+        {
+            "configsprint": 
+            {
+                "configsnotfinded": "Конфигов не обнаружено"
+            },
+            "configsmenu": 
+            {
+                "top": "======================\n|УПРАВЛЕНИЕ КОНФИГАМИ|\n======================",
+                "bot": "======================",
+                "ask": "1. Создать конфиг\n2. Удалить конфиг\n3. Скопировать конфиг\n4. Назад в главное меню\nВвод"
+            },
+            "configcreate":
+            {
+                "top": "======================\n|==СОЗДАНИЕ КОНФИГА==|\n======================",
+                "asks":
+                {
+                    "configname": "Введите название вашего конфига",
+                    "localname": "Введите доп. информацию для вашего конфига",
+                    "token": "Введите ключ сообщества",
+                    "groupid": "Введите ID сообщества",
+                    "yandexlogin": "Введите логин от Yandex.Disk",
+                    "yandexpassword": "Введите пароль от Yandex.Disk",
+                    "usedatabase": "Желаете ли вы, использовать базу данных с известными файлами? (Y\\N)",
+                    "filesinputhelp": "Теперь вы должны ввести путь к файлам \\ папкам \nПример - (C://myfolder/myfile.txt || %AppData%/../local/myfolder || )\nЕсли вы захотите закончить ввод файлов, то введите 0"
+                },
+                "createconfig": "Создаём конфиг..."
+            }
+        },
+        "rats":
+        {
+            "ratmenu": 
+            {
+                "top": "===============\n|МЕНЮ РАТНИКОВ|\n===============",
+                "ask": "1. Создать ратник\n2. Удалить ратник\n3. Назад в главное меню\nВвод"
+            },
+            "ratcreating":
+            {
+                "top": "\n======================\n|==СОЗДАНИЕ РАТНИКА==|\n======================",
+                "bot": "======================",
+                "asks":
+                {
+                    "selectedconfig": "Выберите конфиг, введя его порядковый номер",
+                    "ratfilename": "Введите название вашего ратника (на английском, без использования спец. символов)"
+                }
+            }
+        },
+        "sys":
+        {
+            "start":
+            {
+                "configfoldernonfinded": "Отсутвует папка configs... ",
+                "configfolderhasbeencreated": "Программа создала папку configs..."
+            }
         }
     }
 }
