fix changelang function

--- a/translations/english.json
+++ b/translations/english.json
@@ -34,7 +34,7 @@
             {
                 "top": "======================\n|УПРАВЛЕНИЕ КОНФИГАМИ|\n======================",
                 "bot": "======================",
-                "ask": "1. Создать конфиг\n2. Удалить конфиг\n3. Скопировать конфиг\n4. Назад в главное меню\nВвод"
+                "ask": "1. Создать конфиг\n2. Удалить конфиг\n3. Назад в главное меню\nВвод"
             },
             "configcreate":
             {
