off ratdel, confdel | fix ratcore

--- a/translations/russian.json
+++ b/translations/russian.json
@@ -7,7 +7,7 @@
         "mainmenu":
         {
             "top": "==============\n|ГЛАВНОЕ МЕНЮ|\n==============",
-            "ask": "1. Управление конфигами\n2. Управление ратниками\n3. Смена языка\n4. Перезагрузка\nВвод"
+            "ask": "1. Управление конфигами\n2. Управление троянами\n3. Смена языка\n4. Перезагрузка\nВвод"
         },
         "langs":
         {
@@ -57,17 +57,17 @@
         {
             "ratmenu": 
             {
-                "top": "===============\n|МЕНЮ РАТНИКОВ|\n===============",
-                "ask": "1. Создать ратник\n2. Удалить ратник\n3. Назад в главное меню\nВвод"
+                "top": "===============\n|МЕНЮ ТРОЯНОВ|\n===============",
+                "ask": "1. Создать троян\n2. Удалить троян\n3. Назад в главное меню\nВвод"
             },
             "ratcreating":
             {
-                "top": "\n======================\n|==СОЗДАНИЕ РАТНИКА==|\n======================",
+                "top": "\n======================\n|==СОЗДАНИЕ ТРОЯНА==|\n======================",
                 "bot": "======================",
                 "asks":
                 {
                     "selectedconfig": "Выберите конфиг, введя его порядковый номер",
-                    "ratfilename": "Введите название вашего ратника (на английском, без использования спец. символов)"
+                    "ratfilename": "Введите название вашего трояна (на английском, без использования спец. символов)"
                 }
             }
         },
